feat: Support the use of test that refer to classes in dependent packages.