@@ -1,23 +1,20 @@
 /*
- * Copyright (c) 2024 Joseph Vigneau
+ * Copyright (c) 2024-2026 Joseph Vigneau
  *
- * Permission is hereby granted, free of charge, to any person obtaining a copy
- * of this software and associated documentation files (the “Software”), to
- * deal in the Software without restriction, including without limitation the
- * rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
- * sell copies of the Software, and to permit persons to whom the Software is
+ * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
+ * associated documentation files (the “Software”), to deal in the Software without restriction,
+ * including without limitation the rights to use, copy, modify, merge, publish, distribute,
+ * sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
  *
- * The above copyright notice and this permission notice shall be included in
- * all copies or substantial portions of the Software.
+ * The above copyright notice and this permission notice shall be included in all copies or
+ * substantial portions of the Software.
  *
- * THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
- * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
- * IN THE SOFTWARE.
+ * THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
+ * NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+ * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
+ * DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 
 package org.joev.javadoctest;
@@ -27,6 +24,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
 
 /**
  * A ClassLoader that loads classes by checking the directories in the classpath.
@@ -54,16 +53,30 @@ public class DynamicClassLoader extends ClassLoader {
   protected Class<?> findClass(String name) throws ClassNotFoundException {
     String fileName = name.replace(".", "/") + ".class";
     for (Path path : classpath) {
-      Path filePath = path.resolve(fileName);
-      if (Files.exists(filePath)) {
-        try {
-          byte[] b = Files.readAllBytes(filePath);
-          return defineClass(name, b, 0, b.length);
-        } catch (IOException e) {
-          e.printStackTrace();
+      if (path.toString().endsWith(".jar") && Files.exists(path)) {
+        try (JarFile jar = new JarFile(path.toString())) {
+          JarEntry entry = jar.getJarEntry(fileName);
+          if (entry != null) {
+            byte[] b = jar.getInputStream(entry).readAllBytes();
+            return defineClass(name, b, 0, b.length);
+          }
+        } catch (IOException ioe) {
+          // do something
+          ioe.printStackTrace();
+        }
+
+      } else {
+        Path filePath = path.resolve(fileName);
+        if (Files.exists(filePath)) {
+          try {
+            byte[] b = Files.readAllBytes(filePath);
+            return defineClass(name, b, 0, b.length);
+          } catch (IOException e) {
+            e.printStackTrace();
+          }
         }
       }
     }
-    throw new ClassNotFoundException(name);
+    return ClassLoader.getSystemClassLoader().loadClass(name);
   }
 }
